src/test/InterfaceVars/InterfaceVars.expected
error: InterfaceVars.panda:2:5: interfaces may not contain fields
error: InterfaceVars.panda:3:5: interfaces may not contain fields
error: InterfaceVars.panda:4:5: interfaces may not contain fields
3 errors
