src/test/InterfaceVars/InterfaceVars.panda
interface Broken {
    var test := 0
    property test2 := 1
    def test3 := 2
}